# qclaw

./: .clineignore  .gitignore  .installed  .stale-skills-cleaned  CLINE_CONFIG_LOG.md  CLINE_REUSABILITY_STANDARDS.md  CLINE_VUE_COMPONENT_STANDARDS.md  PREVIEW_SUMMARY.md  PREVIEW_cline-mcp-config.json  README.md  TOOLS.md  USER.md  clinerules.md
cline/: CLINE_CONFIG.md
clinerules/: dry-principle.md  error-handling.md  no-hardcoding.md  project-structure.md  typescript-types.md  vue3-components.md
memory/: 2026-03-24.md  2026-03-26.md  2026-03-28.md  MEMORY.md
openclaw-weixin/: accounts.json
subagents/: runs.json
workspace/: .clinerules  AGENTS.md  CONFIG_MANUAL.md  CONFIG_MAP.md  DECISION_RULES.md  FILE_MANAGEMENT.md  HEARTBEAT.md  (+11 more)
workspace/ai-video-editor/: .gitignore  ARCHITECTURE.md  PROJECT_PLAN.md  README.md  config.yaml  edit_video.py  main.py  pyproject.toml  test_video.srt  transcribe_medium.py  ui.py
workspace/ai-video-editor/docs/: API_DESIGN.md  ARCHITECTURE.md  ERROR_HANDLING.md  TEST_PLAN.md  V2_STEP6_DESIGN.md  V3_SUBTITLE_DESIGN.md  WORKFLOW.md
workspace/ai-video-editor/memory-bank/: activeContext.md  aiContext.md  api-reference.md  design-decisions.md  error-handling.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  test-strategy.md
workspace/ai-video-editor/modules/: __init__.py  analyzer.py  audio.py  content.py  executor.py  logger.py  parser.py  scene.py  subtitle.py  utils.py  validator.py
workspace/ai-video-editor/tests/: generate_test_video.py  generate_test_video2.py  test_add_subtitle.py
(+135 files in other folders)
